--- a/examples/multi-engine.yaml
+++ b/examples/multi-engine.yaml
@@ -8,9 +8,10 @@ modelGroups:
   vllm-llama:
     enabled: true
     
-    image: vllm/vllm-openai
-    tag: v0.6.4
-    imagePullPolicy: IfNotPresent
+    image:
+      repository: vllm/vllm-openai
+      tag: "v0.6.4"
+      pullPolicy: IfNotPresent
     
     modelAlias:
       - "chat"
@@ -108,9 +109,10 @@ modelGroups:
   sglang-embed:
     enabled: true
     
-    image: lmsysorg/sglang
-    tag: v0.3.5.post1
-    imagePullPolicy: IfNotPresent
+    image:
+      repository: lmsysorg/sglang
+      tag: "v0.3.5.post1"
+      pullPolicy: IfNotPresent
     
     modelAlias:
       - "embeddings"
@@ -205,9 +207,10 @@ modelGroups:
   tensorrt-codegen:
     enabled: true
     
-    image: nvcr.io/nvidia/tritonserver
-    tag: 24.01-trtllm-python-py3
-    imagePullPolicy: IfNotPresent
+    image:
+      repository: nvcr.io/nvidia/tritonserver
+      tag: "24.01-trtllm-python-py3"
+      pullPolicy: IfNotPresent
     
     modelAlias:
       - "code-generation"
