--- a/examples/single-tensorrt-llm.yaml
+++ b/examples/single-tensorrt-llm.yaml
@@ -9,9 +9,10 @@ modelGroups:
     enabled: true
     
     # NVIDIA Triton Inference Server with TensorRT-LLM backend
-    image: nvcr.io/nvidia/tritonserver
-    tag: 24.01-trtllm-python-py3
-    imagePullPolicy: IfNotPresent
+    image:
+      repository: nvcr.io/nvidia/tritonserver
+      tag: "24.01-trtllm-python-py3"
+      pullPolicy: IfNotPresent
     
     # Model aliases that clients can use
     modelAlias:
