ci: update release-please config for better commit detection
- Use packages format for monorepo support
- Add explicit changelog sections for all commit types
- Set bump-minor-pre-major for 0.x versions

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,9 @@
 {
-  "release-type": "helm",
-  "include-component-in-tag": false
+  "packages": {
+    ".": {
+      "release-type": "helm",
+      "package-name": "inference-stack",
+      "include-component-in-tag": false
+    }
+  }
 }
