fix: add release token and helm package from correct directory

--- a/.github/workflows/publish-chart.yml
+++ b/.github/workflows/publish-chart.yml
@@ -32,5 +32,5 @@ jobs:
 
       - name: Package and push Helm chart
         run: |
-          helm package helm/
+          helm package .
           helm push *.tgz oci://ghcr.io/doublewordai
