--- a/examples/single-vllm.yaml
+++ b/examples/single-vllm.yaml
@@ -91,11 +91,20 @@ modelGroups:
       #       key: token
     
     # Health checks
+    startupProbe:
+      enabled: true
+      type: http
+      path: /health
+      initialDelaySeconds: 30
+      periodSeconds: 10
+      timeoutSeconds: 5
+      failureThreshold: 60  # 10 minutes for model download
+    
     livenessProbe:
       enabled: true
       type: http
       path: /health
-      initialDelaySeconds: 300
+      initialDelaySeconds: 5
       periodSeconds: 10
       timeoutSeconds: 5
       failureThreshold: 3
@@ -104,10 +113,10 @@ modelGroups:
       enabled: true
       type: http
       path: /health
-      initialDelaySeconds: 300
+      initialDelaySeconds: 2
       periodSeconds: 5
       timeoutSeconds: 3
-      failureThreshold: 10
+      failureThreshold: 3
     
     # Resource requirements
     resources:
